samples/_failures_safe/1761076081_476d7a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b1dcb2d1.c: In function ‘main’:
./samples/SAFE/__tmp_b1dcb2d1.c:181:9: error: expected expression at end of input
  181 |         input[len -
      |         ^~~~~
./samples/SAFE/__tmp_b1dcb2d1.c:181:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b1dcb2d1.c:181:9: error: expected declaration or statement at end of input
